fix: Add margin top to progress bar to consider safe area on mobile

--- a/app/assets/tailwind/maybe-design-system.css
+++ b/app/assets/tailwind/maybe-design-system.css
@@ -448,6 +448,10 @@
     position: fixed;
     top: env(safe-area-inset-top, 0);
   }
+
+  .turbo-progress-bar {
+    margin-top: env(safe-area-inset-top);
+  }
 }
 
 @layer utilities {
